Intro UI, Z-Index Bug Fix

--- a/src/ignitus-Introduction/Styles/style.scss
+++ b/src/ignitus-Introduction/Styles/style.scss
@@ -33,7 +33,7 @@
 	height: 1200px;
 
 	position: relative;
-	z-index: -2;
+	z-index: 0;
 
 	@media (max-width: 751px) {
 		& {
@@ -106,7 +106,7 @@
 	height: auto;
 	width: 22%;
 
-	z-index: -1;
+	z-index: 1;
 }
 
 .intro__content {
